# zdwm

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile
.githooks/: pre-commit
build-utils/: atoms-extern.sh  atoms-intern.sh
docs/: ARCHITECTURE_REFACTORING_PLAN.org  MINIMAL_CORE_WITH_EXTENSIONS.org  config_system.md  config_system.org
docs/min_core_draft/: README.org  WM_COMMAND_RULES.org  WM_EVENT_ROUTING.org  WM_POLICY_APPLY_COMMAND_SKELETON.org  WM_STICKY_WINDOW_RULES.org  WORKSPACE_CONFIG_EXAMPLES.org  wm_backend.h  wm_binding.h  wm_command.h  wm_desc.h  wm_event.h  wm_layout.h  wm_plan.h  wm_policy.h  wm_policy_config.h  wm_runtime.h  wm_service.h  wm_state.h  wm_types.h  wm_window_meta.h  wm_workspace_desc.h
include/zdwm/: action.h  config.h  layout.h  rules.h  types.h
src/: CMakeLists.txt  action.c  action.h  atoms-list.txt  atoms.c  atoms.h  audio.c  audio.h  backtrace.c  backtrace.h  base.h  buffer.c  buffer.h  client.c  client.h  color.c  color.h  config.c  config.h  config.h.in  default_config.h  event.c  event.h  image.c  image.h  layout.c  layout.h  main.c  monitor.c  monitor.h  rect.c  rect.h  renderer.c  renderer.h  status.c  status.h  text.c  text.h  tray.c  tray.h  (+16 more)
src/backend/: output_utils.c  output_utils.h  x11.c
src/backend/x11/: backend.c  event.c  internal.h  window.c  window.h
src/base/: array.h  color.c  color.h  log.c  log.h  macros.h  memory.h  window_list.c  window_list.h
src/config/: defaults.c  defaults.h  loader.c  loader.h  runtime_config.c  runtime_config.h
src/core/: action.c  action.h  backend.h  binding.c  binding.h  command.h  command_buffer.c  command_buffer.h  event.c  event.h  layer.c  layer.h  layout.c  layout.h  plan.c  plan.h  policy.c  policy.h  rules.c  rules.h  runtime.c  runtime.h  state.c  state.h  types.h  window.c  window.h  wm_desc.h
src/layouts/: fair.c  fair.h  fullscreen.c  fullscreen.h  maximize.c  maximize.h
tests/: CMakeLists.txt
tests/backend/: CMakeLists.txt  output_utils_test.c
tests/config/: CMakeLists.txt  config_loader_test.c  fixture_valid_config.c  fixture_without_setup.c  helpers.h  runtime_config_test.c
tests/core/: CMakeLists.txt  main.c
